Added header content

--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <link rel="stylesheet" href="css/main.css">
+
   <title>Frontend Mentor | Loopstudios landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  
+
 </head>
 <body>
+  <header>
+    <div class="container">
+      <img src="images/logo.svg" alt="loopstudios" />
+      <nav>
+          <img src="images/icon-hamburger.svg" alt="menu" />
+      </nav>
+    </div>
+  </header>
 
+  <main>
+    <div class="container">
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+    </div>
+  </footer>
 </body>
 </html>
