Added hero section and rearranged header

--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 
 </head>
 <body>
-  <header>
-    <div class="container">
-      <img src="images/logo.svg" alt="loopstudios" />
-      <nav>
-          <img src="images/icon-hamburger.svg" alt="menu" />
-      </nav>
+  <div class="header-hero-section">
+    <header>
+      <div class="container">
+        <img src="images/logo.svg" alt="loopstudios" />
+        <nav>
+            <img src="images/icon-hamburger.svg" alt="menu" />
+        </nav>
+      </div>
+    </header>
+
+    <div class="hero-section">
+        <h1>Immersive Experiences that Deliver</h1>
     </div>
-  </header>
+  </div>
 
   <main>
     <div class="container">
