--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
   <main>
     <div class="container">
+        <section class="description-section">
+            <div class="description--text">
+                <h2>The Leader in Interactive VR</h2>
+                <p>Founded in 2011, Loopstudios has been productin world-class virtual reality projects for some of the best companies around the globe.  Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
+            </div>
+        </section>
     </div>
   </main>
 
