Added html for portfolio section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
                 <p>Founded in 2011, Loopstudios has been productin world-class virtual reality projects for some of the best companies around the globe.  Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
             </div>
         </section>
+
+        <section class="portfolio-section">
+            <h2>Our Creations</h2>
+            <a href="#">See All</a>
+            <ul class="projects">
+              <li class="single-project earth"><a href="#">Deep Earth</a></li>
+              <li class="single-project arcade"><a href="#">Night Arcade</a></li>
+              <li class="single-project soccer"><a href="#">Soccer Team VR</a></li>
+              <li class="single-project grid"><a href="#">The Grid</a></li>
+              <li class="single-project racetrack"><a href="#">From Up Above VR</a></li>
+              <li class="single-project borealis"><a href="#">Pocket Borealis</a></li>
+              <li class="single-project curious"><a href="#">The Curiosity</a></li>
+              <li class="single-project earth"><a href="#">Make it Fisheye</a></li>
+            </ul>
+        </section>
     </div>
   </main>
 
