--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="header-hero-section">
-    <header>
+    <header id="top">
       <div class="container">
         <img src="images/logo.svg" alt="loopstudios" />
         <nav>
@@ -57,6 +57,29 @@
 
   <footer>
     <div class="container">
+        <div class="footer--left">
+            <a href="#top">
+              <img src="images/logo.svg" alt="loopstudios" />
+              <nav role="footer-nav">
+                  <ul>
+                      <li><a href="#">About</a></li>
+                      <li><a href="#">Careers</a></li>
+                      <li><a href="#">Events</a></li>
+                      <li><a href="#">Products</a></li>
+                      <li><a href="#">Support</a></li>
+                  </ul>
+              </nav>
+            </a>
+        </div>
+        <div class="footer--right">
+            <ul class="social-links">
+                <li><a href="#"><img src="images/icon-facebook.svg" alt="facebook" /></a></li>
+                <li><a href="#"><img src="images/icon-twitter.svg" alt="twitter" /></a></li>
+                <li><a href="#"><img src="images/icon-pinterest.svg" alt="pinterest" /></a></li>
+                <li><a href="#"><img src="images/icon-instagram.svg" alt="instagram" /></a></li>
+            </ul>
+            <span class="copyright">© 2021 Loopstudios. All rights reserved.</span>
+        </div>
     </div>
   </footer>
 </body>
