Added mobile styling for header

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
   <div class="header-hero-section">
-    <header id="top">
+    <header id="top" class="center">
       <div class="container">
-        <img src="images/logo.svg" alt="loopstudios" />
+        <img src="images/logo.svg" alt="loopstudios" class="logo"/>
         <nav>
             <img src="images/icon-hamburger.svg" alt="menu" />
         </nav>
