--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <div class="hero-section">
+    <div class="hero-section container">
         <h1>Immersive Experiences that Deliver</h1>
     </div>
   </div>
